[package]
name = "rsomics-multi-replace"
version = "0.1.1"
description = "Multiplicative zero-replacement of a compositional matrix (closure + zero→delta substitution, rows re-sum to 1) — scikit-bio skbio.stats.composition.multi_replace equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-multi-replace"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-multi-replace"
path = "src/main.rs"

[lib]
name = "rsomics_multi_replace"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
